Add list of posts.

--- a/src/template.html
+++ b/src/template.html
@@ -10,6 +10,12 @@
 		<link rel="stylesheet" href="global.css" />
 		<link rel="manifest" href="manifest.json" />
 		<link rel="icon" type="image/png" href="favicon.png" />
+		<link
+			rel="alternate"
+			type="application/rss+xml"
+			title="RSS Feed"
+			href="/blog/feed"
+		/>
 
 		<!-- Sapper generates a <style> tag containing critical CSS
 	     for the current page. CSS for the rest of the app is
