Remove non-portfolio stuff, naming and structure changes

--- a/src/template.html
+++ b/src/template.html
@@ -29,7 +29,7 @@
 	<body>
 		<!-- The application will be rendered inside this element,
 	     because `app/client.js` references it -->
-		<div id="sapper">%sapper.html%</div>
+		<div id="THIS-IS-WHERE-THE-APP-GOES">%sapper.html%</div>
 
 		<!-- Sapper creates a <script> tag containing `app/client.js`
 	     and anything else it needs to hydrate the app and
