Refactor blog to convert RSS feed to a lambda

--- a/src/template.html
+++ b/src/template.html
@@ -14,7 +14,7 @@
 			rel="alternate"
 			type="application/rss+xml"
 			title="RSS Feed"
-			href="/blog/feed"
+			href="/.netlify/functions/feed"
 		/>
 
 		<!-- Sapper generates a <style> tag containing critical CSS
