--- a/src/template.html
+++ b/src/template.html
@@ -14,7 +14,7 @@
 			rel="alternate"
 			type="application/rss+xml"
 			title="RSS Feed"
-			href="/.netlify/functions/feed"
+			href="https://barnsworthburning-api.netlify.com/.netlify/functions/feed"
 		/>
 
 		<!-- Sapper generates a <style> tag containing critical CSS
