--- a/src/template.html
+++ b/src/template.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<head>
+	<head lang="en">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<meta name="theme-color" content="#333333" />
+		<meta name="Description" content="The personal website / portfolio / commonplace book of Nick Trombley, software designer / web developer." />
 
 		%sapper.base%
 
