Style and SEO updates

--- a/src/template.html
+++ b/src/template.html
@@ -2,12 +2,9 @@
 <html>
 	<head lang="en">
 		<meta charset="utf-8" />
+		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
-		<meta name="theme-color" content="#333333" />
-		<meta
-			name="Description"
-			content="The personal website / portfolio / commonplace book of Nick Trombley, software designer / web developer."
-		/>
+		<meta property="og:type" content="website" />
 
 		%sapper.base%
 
@@ -28,7 +25,7 @@
 		%sapper.head%
 	</head>
 	<body>
-		<div id="THIS-IS-WHERE-THE-APP-GOES" class="app">
+		<div id="🕹️" class="app">
 			%sapper.html%
 		</div>
 		%sapper.scripts%
