New monospace font

--- a/src/template.html
+++ b/src/template.html
@@ -8,6 +8,10 @@
 
 		%sapper.base%
 
+		<link
+			href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,500&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="global.css" />
 		<link rel="manifest" href="manifest.json" />
 		<link rel="icon" type="image/png" href="favicon.png" />
