The calm before the storm

--- a/src/template.html
+++ b/src/template.html
@@ -9,11 +9,10 @@
 		%sapper.base%
 
 		<link
-			href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,500&display=swap"
+			href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=IBM+Plex+Sans:ital,wght@0,200;0,400;0,500;1,400&display=swap"
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="global.css" />
-		<link rel="manifest" href="manifest.json" />
 		<link rel="icon" type="image/png" href="favicon.png" />
 		<link
 			rel="alternate"
