Add an RSS feed for real

--- a/src/template.html
+++ b/src/template.html
@@ -16,12 +16,7 @@
 		/>
 		<link rel="stylesheet" href="global.css" />
 		<link rel="icon" type="image/png" href="favicon.png" />
-		<link
-			rel="alternate"
-			type="application/rss+xml"
-			title="RSS Feed"
-			href="https://barnsworthburning-api.netlify.com/.netlify/functions/feed"
-		/>
+		<link rel="alternate" type="application/atom+xml" title="RSS Feed (Atom)" href="/feed.xml" />
 
 		<!-- Injected style tags -->
 		%sapper.styles%
