--- a/src/template.html
+++ b/src/template.html
@@ -16,7 +16,7 @@
 		/>
 		<link rel="stylesheet" href="global.css" />
 		<link rel="icon" type="image/png" href="favicon.png" />
-		<link rel="alternate" type="application/atom+xml" title="RSS Feed (Atom)" href="/feed.xml" />
+		<!-- <link rel="alternate" type="application/atom+xml" title="RSS Feed (Atom)" href="/feed.xml" /> -->
 
 		<!-- Injected style tags -->
 		%sapper.styles%
@@ -25,9 +25,7 @@
 		%sapper.head%
 	</head>
 	<body>
-		<div id="🕹️" class="app">
-			%sapper.html%
-		</div>
+		<div id="🕹️" class="app">%sapper.html%</div>
 		%sapper.scripts%
 	</body>
 </html>
