better intro transition

--- a/src/template.html
+++ b/src/template.html
@@ -25,7 +25,7 @@
 		%sapper.head%
 	</head>
 	<body>
-		<div id="🕹️" class="app">%sapper.html%</div>
+		<div id="🕹️" class="app 🌞">%sapper.html%</div>
 		%sapper.scripts%
 	</body>
 </html>
