fix duplicate head tags

--- a/src/template.html
+++ b/src/template.html
@@ -5,9 +5,10 @@
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 
-		<title>barnsworthburning</title>
-		<meta property="og:type" content="website" />
+		<!-- Injected head elements -->
+		%sapper.head%
 
+		<!-- Injected <base> tag -->
 		%sapper.base%
 
 		<link
@@ -20,9 +21,6 @@
 
 		<!-- Injected style tags -->
 		%sapper.styles%
-
-		<!-- Injected head elements -->
-		%sapper.head%
 	</head>
 	<body>
 		<div id="🕹️" class="app 🌞">%sapper.html%</div>
