--- a/src/template.html
+++ b/src/template.html
@@ -17,7 +17,7 @@
 		/>
 		<link rel="stylesheet" href="global.css" />
 		<link rel="icon" type="image/png" href="favicon.png" />
-		<!-- <link rel="alternate" type="application/atom+xml" title="RSS Feed (Atom)" href="/feed.xml" /> -->
+		<link rel="alternate" type="application/atom+xml" title="RSS Feed (Atom)" href="/feed.xml" />
 
 		<!-- Injected style tags -->
 		%sapper.styles%
