change query selector

--- a/src/template.html
+++ b/src/template.html
@@ -23,7 +23,7 @@
 		%sapper.styles%
 	</head>
 	<body>
-		<div id="🕹️" class="app 🌞">%sapper.html%</div>
+		<div id="sapper" class="app 🌞">%sapper.html%</div>
 		%sapper.scripts%
 	</body>
 </html>
