--- a/src/app.html
+++ b/src/app.html
@@ -4,13 +4,7 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
-
-		<!-- Injected head elements -->
-		%sapper.head%
-
-		<!-- Injected <base> tag -->
-		%sapper.base%
-
+		%svelte.head%
 		<link
 			href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=IBM+Plex+Sans:ital,wght@0,300;0,400;0,500;1,400&display=swap"
 			rel="stylesheet"
@@ -18,12 +12,8 @@
 		<link rel="stylesheet" href="global.css" />
 		<link rel="icon" type="image/png" href="favicon.png" />
 		<link rel="alternate" type="application/atom+xml" title="RSS Feed (Atom)" href="/feed.xml" />
-
-		<!-- Injected style tags -->
-		%sapper.styles%
 	</head>
-	<body>
-		<div id="🕹️" class="app 🌞">%sapper.html%</div>
-		%sapper.scripts%
+	<body id="🕹️" class="app 🌞">
+		%svelte.body%
 	</body>
 </html>
