--- a/src/app.html
+++ b/src/app.html
@@ -9,8 +9,8 @@
 			href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=IBM+Plex+Sans:ital,wght@0,300;0,400;0,500;1,400&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="global.css" />
-		<link rel="icon" type="image/png" href="favicon.png" />
+		<link rel="stylesheet" href="/global.css" />
+		<link rel="icon" type="image/png" href="/favicon.png" />
 		<link rel="alternate" type="application/atom+xml" title="RSS Feed (Atom)" href="/feed.xml" />
 	</head>
 	<body id="🕹️" class="app 🌞">
