--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,8 @@
 			href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=IBM+Plex+Sans:ital,wght@0,300;0,400;0,500;1,400&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="%sveltekit.assets%/global.css" />
+		<!-- <link rel="stylesheet" href="%sveltekit.assets%/app.css" /> -->
+		<link rel="stylesheet" href="%sveltekit.assets%/triptych.css" />
 		<link rel="icon" type="image/png" href="%sveltekit.assets%/favicon.png" />
 		<link rel="alternate" type="application/atom+xml" title="RSS Feed (Atom)" href="/feed.xml" />
 	</head>
