--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="🌞">
+<html lang="en" class="dark amber neutral">
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -9,7 +9,7 @@
 			href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=IBM+Plex+Sans:ital,wght@0,300;0,400;0,500;1,400&display=swap"
 			rel="stylesheet"
 		/>
-		<!-- <link rel="stylesheet" href="%sveltekit.assets%/app.css" /> -->
+		<link rel="stylesheet" href="%sveltekit.assets%/app.css" />
 		<link rel="stylesheet" href="%sveltekit.assets%/triptych.css" />
 		<link rel="icon" type="image/png" href="%sveltekit.assets%/favicon.png" />
 		<link rel="alternate" type="application/atom+xml" title="RSS Feed (Atom)" href="/feed.xml" />
