Playing around with cookies-based theme defaults

--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" class="dark neutral indigo">
+<html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
+		<script src="%sveltekit.assets%/themePreferences.js"></script>
 		%sveltekit.head%
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
