--- a/src/app.html
+++ b/src/app.html
@@ -16,6 +16,6 @@
 		<link rel="alternate" type="application/atom+xml" title="RSS Feed (Atom)" href="/feed.xml" />
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div id="app" class="app" style="display: contents">%sveltekit.body%</div>
+		<div id="app" class="app">%sveltekit.body%</div>
 	</body>
 </html>
