--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
-		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<script src="%sveltekit.assets%/themePreferences.js"></script>
 		%sveltekit.head%
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -12,8 +13,7 @@
 			href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=IBM+Plex+Sans:ital,wght@0,300;0,400;0,500;1,400&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="icon" type="image/png" href="%sveltekit.assets%/favicon.png" />
-		<link rel="alternate" type="application/atom+xml" title="RSS Feed (Atom)" href="/feed.xml" />
+		<!-- <link rel="alternate" type="application/atom+xml" title="RSS Feed (Atom)" href="/feed.xml" /> -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div id="app" class="app">%sveltekit.body%</div>
