Add anti-AI crawler stuff

--- a/src/app.html
+++ b/src/app.html
@@ -3,8 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
+		<meta name="robots" content="noai, noimageai" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<script src="%sveltekit.assets%/themePreferences.js"></script>
 		%sveltekit.head%
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
