--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,12 @@
 			href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=IBM+Plex+Sans:ital,wght@0,300;0,400;0,500;1,400&display=swap"
 			rel="stylesheet"
 		/>
-		<!-- <link rel="alternate" type="application/atom+xml" title="RSS Feed (Atom)" href="/feed.xml" /> -->
+		<link
+			rel="alternate"
+			type="application/atom+xml"
+			title="RSS Feed (Atom)"
+			href="/feed.xml"
+		/>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div id="app" class="app">%sveltekit.body%</div>
