Move SEO to app.html

--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,19 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
+		<title>barnsworthburning</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta
+			name="description"
+			content="Extract (n): A decoction, solution, or infusion made by dissolving out from any substance that which gives it its essential and characteristic virtue; essence."
+		/>
+		<meta name="author" content="Nick Trombley" />
+		<meta name="robots" content="noai, noimageai" />
+		<meta property="og:type" content="website" />
+		<meta
+			name="keywords"
+			content="Nick Trombley, design, barnsworthburning, barns worth burning, commonplace, reading, writing, art, books"
+		/>
 		%sveltekit.head%
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<script src="%sveltekit.assets%/themePreferences.js"></script>
