--- a/src/app.html
+++ b/src/app.html
@@ -10,15 +10,14 @@
 			content="Extract (n): A decoction, solution, or infusion made by dissolving out from any substance that which gives it its essential and characteristic virtue; essence."
 		/>
 		<meta name="author" content="Nick Trombley" />
-		<meta name="robots" content="noai, noimageai" />
 		<meta property="og:type" content="website" />
 		<meta
 			name="keywords"
 			content="Nick Trombley, design, barnsworthburning, barns worth burning, commonplace, reading, writing, art, books"
 		/>
-		%sveltekit.head%
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<script src="%sveltekit.assets%/themePreferences.js"></script>
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+		<link rel="icon" href="/favicon.png" />
+		<script src="/themePreferences.js"></script>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -31,6 +30,7 @@
 			title="RSS Feed (Atom)"
 			href="/feed.xml"
 		/>
+		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div id="app" class="app">%sveltekit.body%</div>
