Add opengraph tags and update description for better SEO

--- a/src/app.html
+++ b/src/app.html
@@ -2,15 +2,15 @@
 <html lang="en" class="indigo">
 	<head>
 		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<title>barnsworthburning</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta
-			name="description"
-			content="Extract (n): A decoction, solution, or infusion made by dissolving out from any substance that which gives it its essential and characteristic virtue; essence."
-		/>
+		<meta name="description" content="A commonplace book." />
 		<meta name="author" content="Nick Trombley" />
 		<meta property="og:type" content="website" />
+		<meta property="og:title" content="barnsworthburning" />
+		<meta property="og:description" content="A commonplace book." />
+		<meta property="og:url" content="https://barnsworthburning.net" />
 		<meta
 			name="keywords"
 			content="Nick Trombley, design, barnsworthburning, barns worth burning, commonplace, reading, writing, art, books"
