Restore full original description

--- a/src/app.html
+++ b/src/app.html
@@ -5,11 +5,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<title>barnsworthburning</title>
-		<meta name="description" content="A commonplace book." />
+		<meta
+			name="description"
+			content="A digital garden / commonplace book / Zettelkasten created and maintained by Nick Trombley, a software designer living in Boston."
+		/>
 		<meta name="author" content="Nick Trombley" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="barnsworthburning" />
-		<meta property="og:description" content="A commonplace book." />
+		<meta
+			property="og:description"
+			content="A digital garden / commonplace book / Zettelkasten created and maintained by Nick Trombley, a software designer living in Boston."
+		/>
 		<meta property="og:url" content="https://barnsworthburning.net" />
 		<meta
 			name="keywords"
