--- a/src/app.html
+++ b/src/app.html
@@ -7,14 +7,14 @@
 		<title>barnsworthburning</title>
 		<meta
 			name="description"
-			content="A digital garden / commonplace book / Zettelkasten created and maintained by Nick Trombley, a software designer living in Boston."
+			content="A commonplace book."
 		/>
 		<meta name="author" content="Nick Trombley" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="barnsworthburning" />
 		<meta
 			property="og:description"
-			content="A digital garden / commonplace book / Zettelkasten created and maintained by Nick Trombley, a software designer living in Boston."
+			content="A commonplace book."
 		/>
 		<meta property="og:url" content="https://barnsworthburning.net" />
 		<meta
