--- a/src/app.html
+++ b/src/app.html
@@ -1,29 +1,23 @@
 <!doctype html>
-<html lang="en" class="indigo">
+<html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<title>barnsworthburning</title>
-		<meta
-			name="description"
-			content="A commonplace book."
-		/>
+		<meta name="description" content="A commonplace book." />
 		<meta name="author" content="Nick Trombley" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="barnsworthburning" />
-		<meta
-			property="og:description"
-			content="A commonplace book."
-		/>
+		<meta property="og:description" content="A commonplace book." />
 		<meta property="og:url" content="https://barnsworthburning.net" />
 		<meta
 			name="keywords"
 			content="Nick Trombley, design, barnsworthburning, barns worth burning, commonplace, reading, writing, art, books"
 		/>
+		<script src="/themePreferences.js"></script>
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 		<link rel="icon" href="/favicon.png" />
-		<script src="/themePreferences.js"></script>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
