Update dependencies and format repo

--- a/src/app.html
+++ b/src/app.html
@@ -14,12 +14,7 @@
 			rel="stylesheet"
 		/>
 		%sveltekit.head%
-		<link
-			rel="alternate"
-			type="application/atom+xml"
-			title="RSS Feed (Atom)"
-			href="/feed.xml"
-		/>
+		<link rel="alternate" type="application/atom+xml" title="RSS Feed (Atom)" href="/feed.xml" />
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div id="app" class="app">%sveltekit.body%</div>
